--- a/style.css
+++ b/style.css
@@ -1,53 +1,97 @@
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
+    background-color: #F8ecd2;
     font-family: 'Roboto', sans-serif;
 }
 
 h1 {
     font-family: 'Abril Fatface', cursive;
+    font-size: 100pt;
 }
 
 h2 {
     font-family: 'Roboto', sans-serif;
 }
 
+h3 {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 50pt;
+}
+
 h5 {
     letter-spacing: 3px;
 }
+
+p{
+    font-family: 'Roboto', sans-serif;
+    font-size: 14pt;
+    letter-spacing: 2pt;
+}
+
+/* unvisited link */
+a:link {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: white;
+  }
+  
+  /* selected link */
+  a:active {
+    color:black;
+    text-decoration: none;
+  } 
 
 p {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
 
-html,
-body,
-header,
-.view {
-    height: 100vh;
-}
-
-@media (max-width: 1000px) {
-    html,
-    body,
-    header,
-    .view {
-        height: 70%;
-    }
-}
-
-.background-image {
+.container-2 {
+    position: relative;
+    text-align: center;
     background-image: url('images/group_photo.png');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-}
+    background-size: 80%;
+    background-position: center;
+    height: 500px;
+  } 
 
-.text-center {
-    position: relative;
+  .centered {
+    position: absolute;
     top: 50%;
     left: 50%;
-    margin-right: -50%;
     transform: translate(-50%, -50%);
-    align-items: center;
-    justify-content: center;
+  }
+
+.exhibition-img {
+    max-width: 200px;
+    min-width: 50px;
+
 }
+
+@media screen and (max-width: 600px) {
+
+
+    .exhibition-img {
+        display: none;
+    }
+
+    .container-2 {
+        height: 200px;
+    }
+
+
+  }
