--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     scroll-behavior: smooth;
-  }
+}
 
 body {
     background-color: #F8ecd2;
@@ -25,34 +25,48 @@ h5 {
     letter-spacing: 3px;
 }
 
-p{
+p {
     font-family: 'Roboto', sans-serif;
     font-size: 14pt;
     letter-spacing: 2pt;
 }
 
+.title {
+    padding-bottom: 50pt;
+    padding-top: 25pt;
+    text-align: end;
+}
+
+
 /* unvisited link */
+
 a:link {
     color: black;
     text-decoration: none;
-  }
-  
-  /* visited link */
-  a:visited {
+}
+
+
+/* visited link */
+
+a:visited {
     color: black;
     text-decoration: none;
-  }
-  
-  /* mouse over link */
-  a:hover {
+}
+
+
+/* mouse over link */
+
+a:hover {
     color: white;
-  }
-  
-  /* selected link */
-  a:active {
-    color:black;
+}
+
+
+/* selected link */
+
+a:active {
+    color: black;
     text-decoration: none;
-  } 
+}
 
 p {
     font-family: 'Roboto', sans-serif;
@@ -67,31 +81,80 @@ p {
     background-size: 80%;
     background-position: center;
     height: 500px;
-  } 
+}
 
-  .centered {
+.centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-
-.exhibition-img {
-    max-width: 200px;
-    min-width: 50px;
-
 }
 
-@media screen and (max-width: 600px) {
+.exhibition-img {
+    width: 100%;
+    height: 100%
+}
 
+.biotext {
+    padding-bottom: 50pt;
+}
 
+.gallery {
+    padding-top: 50pt;
+}
+
+.piece_text{
+    padding: 5pt;
+    
+}
+
+/* MOBILE SCREENS */
+
+@media screen and (max-width: 450px) {
     .exhibition-img {
         display: none;
     }
 
-    .container-2 {
-        height: 200px;
+    .biotext {
+        padding-bottom: 0pt;
     }
 
+    .gallery {
+        padding-top: 10pt;
+    }
+    
+    .piece_text{
+        padding: 0pt;
+        display: inline-flex;
+        
+    }
 
-  }
+    .col-6{
+        flex: none;
+        max-width: none;
+        text-align: center;
+    }
+
+    .title_of_piece{
+        
+        padding-left: 15pt;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+
+    .biotext {
+        padding-bottom: 0pt;
+    }
+
+    .gallery {
+        padding-top: 10pt;
+    }
+
+    .container-2 {
+        height: 300px;
+    }
+
+}
+
