--- a/style.css
+++ b/style.css
@@ -73,12 +73,20 @@ p {
     font-weight: 300;
 }
 
+.logo-image{
+	width: 300px;
+	height: auto;
+	align-self: center;
+	
+	
+}
+
 .container-2 {
     position: relative;
     text-align: center;
     background-image: url('images/group_photo.png');
     background-repeat: no-repeat;
-    background-size: 80%;
+    background-size: 100%;
     background-position: center;
     height: 500px;
 }
@@ -101,6 +109,7 @@ p {
 
 .gallery {
     padding-top: 50pt;
+    padding-bottom: 100px;
 }
 
 .piece_text{
@@ -139,6 +148,10 @@ p {
         
         padding-left: 15pt;
     }
+	
+	.logo-image{
+		display: none;
+	}
 }
 
 
@@ -155,6 +168,12 @@ p {
     .container-2 {
         height: 300px;
     }
+	
+	.logo-image{
+		display: none;
+	}
 
 }
 
+.footer {
+}
