--- a/individualpage.css
+++ b/individualpage.css
@@ -32,3 +32,14 @@ h2{
 	padding-right: 20pt;
 	padding-top: 50pt;
 }
+
+@media screen and (max-width: 450px) {
+    
+}
+
+
+@media screen and (max-width: 768px) {
+
+    
+
+}
