--- a/video360.css
+++ b/video360.css
@@ -1,4 +1,5 @@
-body, html{
+body,
+html {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
@@ -10,7 +11,7 @@ h4 {
     padding-bottom: 20px;
 }
 
-.video{
+.video {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -22,8 +23,10 @@ h4 {
     z-index: 1;
 }
 
+
 /* CHECK RESPONSIVENESS OF TITLE AND BUTTON ON MOBILE */
-.overvideo{
+
+.overvideo {
     position: fixed;
     z-index: 2;
     text-align: center;
@@ -33,7 +36,7 @@ h4 {
     margin-right: 50%;
 }
 
-#buttonvideo{
+#buttonvideo {
     width: 250px;
     height: 60px;
     border-color: #F8ecd2;
@@ -41,10 +44,10 @@ h4 {
     background-color: transparent;
     color: #F8ecd2;
 }
-    
-#buttonvideo:hover{
-    width: 200px;
-    height: 50px;
+
+#buttonvideo:hover {
+    width: 250px;
+    height: 60px;
     border-color: #63B5A2;
     border-width: 2px;
     background-color: rgba(99, 181, 162, 0.75);
