adding js elements

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ a:active {
     z-index: 3;
     top: 0;
     right: 0;
-    background-image: linear-gradient(to top, #ffffff, #63b5a2);
+    background-image: linear-gradient(to top, #ffffff, #9ea0a0);
     border-left: solid;
     border-left-width: thin;
     border-color: black;
