--- a/style.css
+++ b/style.css
@@ -1,220 +1,244 @@
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    background-color: #F8ecd2;
-    font-family: 'Roboto', sans-serif;
-}
-
-.navbar.navbar-6 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger8.svg?color=154C5B');
-}
-
-h1 {
-    font-family: 'Abril Fatface', cursive;
-    font-size: 100pt;
-}
-
-h2 {
-    font-family: 'Roboto', sans-serif;
-}
-
-h3 {
-    font-family: 'Abril Fatface', cursive;
-    font-size: 50pt;
-}
-
-h5 {
-    letter-spacing: 3px;
-}
-
-p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14pt;
-    letter-spacing: 2pt;
-    font-weight: 300;
-}
-
-.title {
-    padding-bottom: 50pt;
-    padding-top: 25pt;
-    text-align: end;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-    color: #ffffff00;
-}
-
-.title:hover {
-    color: #000000;
-    -webkit-text-stroke-width: 0px;
-}
-
-
-/* unvisited link */
-
-a:link {
-    color: black;
-    text-decoration: none;
-}
-
-
-/* visited link */
-
-a:visited {
-    color: black;
-    text-decoration: none;
-}
-
-
-/* mouse over link */
-
-a:hover {
-    color: white;
-}
-
-
-/* selected link */
-
-a:active {
-    color: black;
-    text-decoration: none;
-}
-
-.logo-image {
-    width: 300px;
-    height: auto;
-    align-self: center;
-}
-
-.container-2 {
-    position: relative;
-    text-align: center;
-    background-image: url('images/group_photo.png');
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
-    height: 500px;
-}
-
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.exhibition-img {
-    width: 100%;
-    height: 100%
-}
-
-.biotext {
-    padding-bottom: 50pt;
-}
-
-.gallery {
-    padding-top: 50pt;
-    padding-bottom: 100px;
-}
-
-.piece_text {
-    padding: 5pt;
-}
-
-
-/* MOBILE SCREENS */
-
-@media screen and (max-width: 450px) {
-    .exhibition-img {
-        display: none;
-    }
-    .biotext {
-        padding-bottom: 0pt;
-    }
-    .gallery {
-        padding-top: 10pt;
-    }
-    .piece_text {
-        padding: 0pt;
-        display: inline-flex;
-    }
-    .col-6 {
-        flex: none;
-        max-width: none;
-        text-align: center;
-    }
-    .title_of_piece {
-        padding-left: 15pt;
-    }
-    .logo-image {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .biotext {
-        padding-bottom: 0pt;
-    }
-    .gallery {
-        padding-top: 10pt;
-    }
-    .container-2 {
-        height: 300px;
-    }
-    .logo-image {
-        display: none;
-    }
-    .sidebar {
-        padding-top: 15px;
-    }
-    .sidebar a {
-        font-size: 18px;
-    }
-}
-
-.footer {}
-
-.sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 3;
-    top: 0;
-    right: 0;
-    background-image: linear-gradient(to top, #ffffff, #9ea0a0);
-    border-left: solid;
-    border-left-width: thin;
-    border-color: black;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    border-image: url(images/left_arrow.png);
-}
-
-.sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: black;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidebar a:hover {
-    color: #f1f1f1
-}
-
-.sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 24px;
-    margin-left: 50px;
-    color: black;
-}
-
-#main {
-    transition: margin-left .5s;
-    padding: 16px;
-}
+        html {
+            scroll-behavior: smooth;
+        }
+        
+        body {
+            background-color: rgb(250, 245, 235);
+            font-family: 'Roboto', sans-serif;
+        }
+        
+        .navbar.navbar-6 .navbar-toggler-icon {
+            background-image: url('https://mdbootstrap.com/img/svg/hamburger8.svg?color=154C5B');
+        }
+        
+        h1 {
+            font-family: 'Abril Fatface', cursive;
+            font-size: 100pt;
+        }
+        
+        h2 {
+            font-family: 'Roboto', sans-serif;
+        }
+        
+        h3 {
+            font-family: 'Abril Fatface', cursive;
+            font-size: 50pt;
+        }
+        
+        h4 {
+            font-family: 'Roboto', sans-serif;
+            font-size: 25pt;
+            font-weight: lighter;
+            color: black;
+            letter-spacing: 3px;
+            text-align: center;
+        }
+        
+        h4:hover {
+            color: white;
+            text-decoration-line: underline;
+            text-decoration: black;
+        }
+        
+        h5 {
+            letter-spacing: 3px;
+        }
+        
+        p {
+            font-family: 'Roboto', sans-serif;
+            font-size: 14pt;
+            letter-spacing: 2pt;
+            font-weight: 300;
+        }
+        
+        hr {
+            border-top: 2px solid;
+        }
+        
+        .title {
+            padding-bottom: 50pt;
+            padding-top: 25pt;
+            text-align: end;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: black;
+            color: #ffffff00;
+        }
+        /* unvisited link */
+        
+        a:link {
+            color: black;
+            text-decoration: none;
+        }
+        /* visited link */
+        
+        a:visited {
+            color: black;
+            text-decoration: none;
+        }
+        /* mouse over link */
+        
+        a:hover {
+            color: white;
+        }
+        /* selected link */
+        
+        a:active {
+            color: black;
+            text-decoration: none;
+        }
+        
+        .logo-image {
+            width: 300px;
+            height: auto;
+            align-self: center;
+        }
+        
+        .container-2 {
+            position: relative;
+            text-align: center;
+            background-image: url('images/coverPhotoMain.png');
+            opacity: 80%;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            background-position: center;
+            height: 500px;
+        }
+        
+        .centered {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        
+        .exhibition-img {
+            width: 100%;
+            height: 100%
+        }
+        
+        .biotext {
+            padding-bottom: 50pt;
+        }
+        
+        .gallery {
+            padding-top: 50pt;
+            padding-bottom: 100px;
+        }
+        
+        .piece_text {
+            padding: 5pt;
+        }
+        /* MOBILE SCREENS */
+        
+        @media screen and (max-width: 450px) {
+            .exhibition-img {
+                display: none;
+            }
+            .biotext {
+                padding-bottom: 0pt;
+            }
+            .gallery {
+                padding-top: 10pt;
+            }
+            .piece_text {
+                padding: 0pt;
+                display: inline-flex;
+            }
+            .col-6 {
+                flex: none;
+                max-width: none;
+                text-align: center;
+            }
+            .title_of_piece {
+                padding-left: 15pt;
+            }
+            .logo-image {
+                display: none;
+            }
+        }
+        
+        @media screen and (max-width: 768px) {
+            .biotext {
+                padding-bottom: 0pt;
+            }
+            .gallery {
+                padding-top: 10pt;
+            }
+            .container-2 {
+                height: 300px;
+            }
+            .logo-image {
+                display: none;
+            }
+            .sidebar {
+                padding-top: 15px;
+            }
+            .sidebar a {
+                font-size: 18px;
+            }
+        }
+        
+        .footer-bottom {
+            padding: 0 0 60px 0;
+        }
+        
+        .footer-social a {
+            margin: 0 10px;
+            color: #bbb;
+            border: 0;
+        }
+        
+        .footer-social a:hover,
+        .footer-social a:focus {
+            color: #000000;
+            border: 0;
+        }
+        
+        .footer-social i {
+            font-size: 24px;
+            vertical-align: middle;
+        }
+        
+        .sidebar {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 3;
+            top: 0;
+            right: 0;
+            background-image: linear-gradient(to top, #ffffff, #9ea0a0);
+            border-left: solid;
+            border-left-width: thin;
+            border-color: black;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+            border-image: url(images/left_arrow.png);
+        }
+        
+        .sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: black;
+            display: block;
+            transition: 0.3s;
+        }
+        
+        .sidebar a:hover {
+            color: #f1f1f1
+        }
+        
+        .sidebar .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 24px;
+            margin-left: 50px;
+            color: black;
+        }
+        
+        #main {
+            transition: margin-left .5s;
+            padding: 16px;
+        }
