--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@
         .container-2 {
             position: relative;
             text-align: center;
-            background-image: url('images/coverPhotoMain.png');
+            background-image: url('images/group_photo.png');
             opacity: 80%;
             background-repeat: no-repeat;
             background-size: 100%;
