--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
         }
         
         h4:hover {
-            color: white;
+            color: #154c5b;
             text-decoration-line: underline;
             text-decoration: black;
         }
@@ -60,7 +60,6 @@
             padding-top: 25pt;
             text-align: end;
         }
-
         /* unvisited link */
         
         a:link {
@@ -76,7 +75,7 @@
         /* mouse over link */
         
         a:hover {
-            color: white;
+            color: #154c5b;
         }
         /* selected link */
         
@@ -196,8 +195,6 @@
             font-size: 24px;
             vertical-align: middle;
         }
-        
-       
         
         #main {
             transition: margin-left .5s;
