--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
         }
         
         h4:hover {
-            color: #154c5b;
+            color: #63b5a3;
             text-decoration-line: underline;
             text-decoration: black;
         }
@@ -75,7 +75,7 @@
         /* mouse over link */
         
         a:hover {
-            color: #154c5b;
+            color: #63b5a3;
         }
         /* selected link */
         
