--- a/style.css
+++ b/style.css
@@ -91,16 +91,18 @@
         }
         
         .container-2 {
-            position: relative;
-            text-align: center;
-            background-image: url('images/group_photo.png');
-            opacity: 100%;
-            background-repeat: no-repeat;
-            background-size: 100%;
-            background-position: center;
+           
             height: 500px;
+            overflow:hidden;
+            position: relative;
         }
         
+        .container-2 img{
+            width: 100%;
+            position: absolute;
+            top: -30%;
+            display:block;
+            }
         .centered {
             position: absolute;
             top: 50%;
@@ -125,6 +127,10 @@
         .piece_text {
             padding: 5pt;
         }
+
+        .mobile-bg-image{
+            display:none;
+        }
         /* MOBILE SCREENS */
         
         @media screen and (max-width: 450px) {
@@ -138,35 +144,52 @@
                 padding-top: 10pt;
             }
             .piece_text {
-                padding: 0pt;
-                display: inline-flex;
+                padding: 10px 5px;
+                display: flex;
+                flex-flow:column;
+                justify-content:center;
+                position:relative;
+                margin-bottom: 10px;
+    min-height: 130px;
+
+
             }
-            .col-6 {
-                flex: none;
-                max-width: none;
-                text-align: left;
-                border-bottom: black;
-                border-bottom-style: dashed;
-                border-bottom-width: thin;
-                padding: 15px;
-            }
-            .title_of_piece {
-                padding-left: 15pt;
-                text-align: right;
-            }
-            .logo-image {
+            .piece_text h6, .piece_text .title_of_piece {
+                z-index:1;
+        }
+        .mobile-bg-image{
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            top: 0;
+            left: 0;
+        }
+        .mobile-bg-image::before{
+            content:'';
+            width:100%;
+            height:100%;
+            background-color: rgba(255,255,255,0.7);
+            position: absolute;
+            top:0;
+            left:0;
+        }            
+        .col-6 {
+            flex: none;
+            max-width: none;
+            text-align: center;
+        }
+            
+        .logo-image {
                 display: none;
-            }
-            .container-2 {
-                height: 200px;
-            }
-            .container-1 {
-                padding-right: 0px;
-                padding-left: 0px;
             }
         }
         
-        @media screen and (max-width: 768px) and (min-width: 450px) {
+        @media screen and (max-width: 768px) {
             .biotext {
                 padding-bottom: 0pt;
             }
@@ -174,7 +197,19 @@
                 padding-top: 10pt;
             }
             .container-2 {
-                height: 250px;
+                height: 300px;
+                position: relative;
+                text-align: center;
+                background-image: url('images/group_photo.png');
+                opacity: 100%;
+                background-repeat: no-repeat;
+                background-size: 100%;
+                background-position: center;
+            }
+
+            .container-2 img{
+                display: none;
+
             }
             .logo-image {
                 display: none;
@@ -185,11 +220,7 @@
             .sidebar a {
                 font-size: 18px;
             }
-            .title_of_piece {
-                padding-left: 15pt;
-                text-align: left;
-                width: 100;
-            }
+            
         }
         
         .footer-bottom {
