button in middle

--- a/video360.css
+++ b/video360.css
@@ -31,9 +31,10 @@ h4 {
     z-index: 2;
     text-align: center;
     bottom: 150px;
-    left: -100px;
-    margin-left: 50%;
-    margin-right: 50%;
+    right: 0px;
+    left: 0px;
+    width: 100vh;
+
 }
 
 #buttonvideo {
